fix alignment

--- a/main.css
+++ b/main.css
@@ -63,6 +63,7 @@ li {
 
 #dice-count-field	{
 	background-color: #e0fde0;
+	border-radius: 10px;
 	color: black;
 	font-weight: bold;
 	text-align: center;
@@ -83,6 +84,7 @@ li {
 }
 
 #left-side-buttons	{
+	margin-top: 10px;
 	float: left;
 	width: 45%;
 }
@@ -93,6 +95,7 @@ li {
 }
 #output	{
 	background-color: #e0fde0;
+	border-radius: 10px;
 	color: black;
 	display: inline-block;
 	font-weight: bold;
@@ -112,7 +115,7 @@ li {
 #right-side-buttons	{
 	float: left;
 	width: 55%;
-	margin-top: 26px;
+	margin-top: 30px;
 }
 #textbox-title	{
 	float: right;
